Fix overlapping background in UserList.

--- a/sass/_user_list.sass
+++ b/sass/_user_list.sass
@@ -11,6 +11,8 @@ $headerHeight: 2.4em
 		height: $headerHeight
 		box-sizing: border-box
 		background-image: linear-gradient(to bottom, #444, #222)
+		// This prevents the background from overlapping with the border image.
+		border-radius: 5px
 		cursor: pointer
 		vertical-align: middle
 		.filterHide
